<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtHeader"
            android:elevation="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="15dp"
            android:textSize="16sp"
            android:text="@string/label_add_comments"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            app:layout_constraintTop_toBottomOf="@+id/txtHeader"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCommentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txtHeader">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/hint_Comments" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowActionButton"
            app:layout_constraintTop_toBottomOf="@id/inputCommentLayout"
            android:layout_margin="10dp"
            app:constraint_referenced_ids="actionCancel,actionComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/action_cancel"
            app:layout_constraintHorizontal_weight="1"
            android:textSize="12sp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionComplete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/action_complete"
            app:layout_constraintHorizontal_weight="1"
            android:textSize="12sp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout >