<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Patient 1"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPatientAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age 40"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/txtPatientName"
        app:layout_constraintTop_toBottomOf="@id/txtPatientName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAppointmentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status : pending"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/txtPatientName"
        app:layout_constraintTop_toBottomOf="@id/txtPatientAge" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAppointmentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Appointment # : 1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/txtPatientName"
        app:layout_constraintTop_toBottomOf="@id/txtAppointmentStatus" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="profileImage,txtAppointmentNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/actionCompleteAppoinment"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_complete"
        android:textSize="12sp"
        android:visibility="gone"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowActionButton"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:layout_marginTop="10dp"
        app:constraint_referenced_ids="actionRejectAppoinment,actionAcceptAppoinment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/actionRejectAppoinment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_reject"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="12sp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/actionAcceptAppoinment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_accept"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="12sp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>



</androidx.constraintlayout.widget.ConstraintLayout>